# radhypre

./: workspace.code-workspace
ex1/: Makefile  ex1.c
ex2/: Makefile
ex3/: Makefile
ex4/: Makefile
ex5/: Makefile
exdif1/: Makefile  difvis.py  radiative_diffusion_solver.cpp  radiative_diffusion_solver1.cpp  readme.txt
exdif2/: Makefile  matsplanckvis.py  radiative_diffusion_solver_3d.cpp  radiative_diffusion_solver_3d_matsplanck.cpp  radiative_diffusion_solver_3d_matsplanck2.cpp  radiative_diffusion_solver_3d_matsplanck3.cpp  radiative_diffusion_solver_3d_matsplanck4.cpp  radiative_diffusion_solver_3d_mg.cpp  radiative_diffusion_solver_3d_mg_hypre_full.cpp
exdifkok1/: CMakeLists.txt
exdifkok1/src/: rad_diff_kok1.cpp  rad_diff_kok2.cpp
exdifkok2/: CMakeLists.txt  readme.txt  readme2.txt
exdifkok2/src/: rad_diff_mpikok1.cpp
exdifkry3/: CMakeLists.txt  Material.cpp  boundary.cpp  exdifkry3.cpp  exdifkry4.cpp  exdifkry5.cpp  exdifkry6  exdifkry6.cpp  exdifkry7.cpp  geometry.cpp  krylovtophat2d.cpp  krylovtophst.cpp  physics.cpp  solver.cpp
exdifkry3/include/: boundary.h  geometry.h  material.h  physics.h  setup.h  solver.h  utilities.h
exdifkry3/src/: Material.cpp  geometry.cpp  main.cpp  physics.cpp  setup.cpp  solver.cpp  utilities.cpp
exdifkry3/tests/: CMakeLists.txt  hyptest1.cpp  hyptest1.h  hyptest1_unittest.cpp
exdifkry3/tests/integration/tests/: MarshakWaveTest.cpp  PipeRadiationTest.cpp  TopHatTest.cpp
exdifkry3/tests/integration/tophatbasic/: main.cpp
exdifkry3/tests/unit/: CMakeLists.txt  hyptest1.cpp  hyptest1.h  hyptest1_unittest.cpp
exij1/: CMakeLists.txt  main.cpp  readme.txt
exkry/: Makefile  radkry.c  radkry.cpp
exkry1/: Makefile  radkry1.c
exkry2/: Makefile  convertmeshtohypre.cpp  gmt.msh  mesh.msh  mesht  radkry2.c  radkry2a.c  radkry2b.c  radkry2e.c  radkry2f.cpp  test.txt
